eclipseWorkspace/AK SFDC/src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Contact_Lead_Status__c</fullName>
        <formula>TEXT( Contact.Funnel_Stage__c ) &amp; &quot; - &quot; &amp; TEXT( Contact.Influencer_for_Search_Firms__c  ) &amp; &quot; - &quot; &amp; TEXT( Contact.Not_Client_Reason__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact / Lead Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Canvassing__c</fullName>
        <formula>TEXT(Contact.Sales_Campaign__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Canvassing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <formula>Contact.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Clicks__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Shows number of times the subscriber clicked links from this email campaign.</inlineHelpText>
        <label>Clicks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Opens__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Shows number of times the subscriber opened this email campaign.</inlineHelpText>
        <label>Opens</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>